--- a/index.html
+++ b/index.html
@@ -2,151 +2,137 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Short Form Periodic Table</title>
+    <title>Менделеев Custom Layout</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <style>
         :root {
             --main-font: 'Arial', sans-serif;
-            --size-symbol: 22px;
-            --size-name: 12px;
-            --size-mass: 10px;
+            --size-sym: 24px;
+            --size-nam: 14px;
+            --size-mas: 12px;
         }
 
-        body { font-family: var(--main-font); background: #fff; padding: 20px; }
+        body { font-family: var(--main-font); background: #fff; padding: 30px; }
         
         .controls {
-            background: #f9f9f9; padding: 15px; border-radius: 8px;
-            display: flex; flex-wrap: wrap; gap: 15px; margin-bottom: 20px;
-            border: 1px solid #eee;
+            display: flex; flex-wrap: wrap; gap: 20px; 
+            background: #f4f4f4; padding: 20px; border-radius: 10px;
+            margin-bottom: 40px; align-items: center;
+            border: 1px solid #ddd;
         }
 
-        /* Сетка на 8 колонок (Группы I - VIII) */
-        #table-container {
+        .control-item { display: flex; flex-direction: column; gap: 5px; font-size: 13px; }
+
+        /* Сетка на 8 колонок */
+        #table-render {
             display: grid;
-            grid-template-columns: repeat(8, minmax(100px, 1fr));
-            gap: 20px 10px;
-            width: fit-content;
+            grid-template-columns: repeat(8, 120px);
+            gap: 30px 15px;
+            background: white;
+            padding: 20px;
         }
 
-        .element-cell {
+        .element {
             display: flex;
             flex-direction: column;
             align-items: flex-start;
             text-align: left;
-            line-height: 1.1;
+            line-height: 1.2;
         }
 
-        .sym { font-size: var(--size-symbol); font-weight: bold; margin-bottom: 2px; }
-        .nam { font-size: var(--size-name); margin-bottom: 1px; }
-        .mas { font-size: var(--size-mass); opacity: 0.7; }
-
-        .group-header { font-weight: bold; padding-bottom: 10px; border-bottom: 1px solid #eee; margin-bottom: 10px; }
+        .s { font-size: var(--size-sym); font-weight: bold; }
+        .n { font-size: var(--size-nam); }
+        .m { font-size: var(--size-mas); opacity: 0.6; }
 
         button { 
-            cursor: pointer; background: #222; color: #fff; border: none; 
-            padding: 8px 16px; border-radius: 4px; font-weight: bold;
+            padding: 10px 20px; background: #000; color: #fff; 
+            border: none; cursor: pointer; border-radius: 5px; 
         }
+        button:hover { background: #333; }
     </style>
 </head>
 <body>
 
 <div class="controls">
-    <input type="file" id="fontPicker" accept=".ttf,.otf">
-    <div class="control-group">
-        Символ: <input type="range" min="10" max="50" value="22" oninput="updateSize('symbol', this.value)">
+    <div class="control-item">
+        <label>Шрифт (.ttf/.otf):</label>
+        <input type="file" id="fontInput" accept=".ttf,.otf">
     </div>
-    <div class="control-group">
-        Имя: <input type="range" min="8" max="25" value="12" oninput="updateSize('name', this.value)">
+    <div class="control-item">
+        Символ: <input type="range" min="10" max="60" value="24" oninput="setS('sym', this.value)">
     </div>
-    <div class="control-group">
-        Масса: <input type="range" min="8" max="25" value="10" oninput="updateSize('mass', this.value)">
+    <div class="control-item">
+        Название: <input type="range" min="8" max="30" value="14" oninput="setS('nam', this.value)">
     </div>
-    <button onclick="downloadTable()">Скачать JPG</button>
+    <div class="control-item">
+        Масса: <input type="range" min="8" max="30" value="12" oninput="setS('mas', this.value)">
+    </div>
+    <button onclick="saveJpg()">Скачать JPG</button>
 </div>
 
-<div id="table-container">
-    <div class="group-header">I</div><div class="group-header">II</div>
-    <div class="group-header">III</div><div class="group-header">IV</div>
-    <div class="group-header">V</div><div class="group-header">VI</div>
-    <div class="group-header">VII</div><div class="group-header">VIII</div>
-</div>
+<div id="table-render"></div>
 
 <script>
-    // Словарь перевода (базовые элементы для примера, API дополнит)
-    const ruNames = {
-        "Hydrogen": "Водород", "Helium": "Гелий", "Lithium": "Литий", "Beryllium": "Бериллий",
-        "Boron": "Бор", "Carbon": "Углерод", "Nitrogen": "Азот", "Oxygen": "Кислород",
-        "Fluorine": "Фтор", "Neon": "Неон", "Sodium": "Натрий", "Magnesium": "Магний",
-        "Aluminum": "Алюминий", "Silicon": "Кремний", "Phosphorus": "Фосфор", "Sulfur": "Сера",
-        "Chlorine": "Хлор", "Argon": "Аргон", "Potassium": "Калий", "Calcium": "Кальций",
-        "Scandium": "Скандий", "Titanium": "Титан", "Vanadium": "Ванадий", "Chromium": "Хром",
-        "Manganese": "Марганец", "Iron": "Железо", "Cobalt": "Кобальт", "Nickel": "Никель",
-        "Copper": "Медь", "Zinc": "Цинк", "Gallium": "Галлий", "Germanium": "Германий",
-        "Arsenic": "Мышьяк", "Selenium": "Селен", "Bromine": "Бром", "Krypton": "Криптон"
-        // ... можно расширить для всех 118
-    };
+    const setS = (t, v) => document.documentElement.style.setProperty(`--size-${t}`, v + 'px');
 
-    function updateSize(type, val) {
-        document.documentElement.style.setProperty(`--size-${type}`, val + 'px');
+    // База данных элементов на русском (сокращенная версия логики расстановки)
+    async function initTable() {
+        // Используем проверенный источник данных
+        const url = 'https://raw.githubusercontent.com/Kofany/simple-periodic-table/master/src/data/periodic-table.json';
+        try {
+            const res = await fetch(url);
+            const data = await res.json();
+            const container = document.getElementById('table-render');
+
+            data.forEach(el => {
+                const div = document.createElement('div');
+                div.className = 'element';
+                
+                // Логика короткой формы: распределяем 118 элементов в 8 колонок
+                // Для простоты используем вычисление группы (1-8)
+                let group = el.group;
+                if (!group) return; // Пропускаем лантаноиды, если нет группы
+
+                div.style.gridColumn = group;
+
+                div.innerHTML = `
+                    <div class="s">${el.symbol}</div>
+                    <div class="n">${el.name.toLowerCase()}</div>
+                    <div class="m">${parseFloat(el.atomic_mass).toFixed(2)}</div>
+                `;
+                container.appendChild(div);
+            });
+        } catch (err) {
+            console.error("Ошибка загрузки:", err);
+        }
     }
 
-    async function loadElements() {
-        const response = await fetch('https://raw.githubusercontent.com/Bowserinator/Periodic-Table-JSON/master/PeriodicTableJSON.json');
-        const data = await response.json();
-        const container = document.getElementById('table-container');
-
-        data.elements.slice(0, 36).forEach(el => { // Для примера берем первые 36 (до Криптона)
-            const cell = document.createElement('div');
-            cell.className = 'element-cell';
-
-            // Логика короткой формы (8 групп)
-            // В упрощенном виде: группа = (номер - 1) % 18, но для короткой формы 
-            // элементы побочных подгрупп (d-металлы) "схлопываются" в те же 8 колонок
-            let group = el.xpos;
-            if (group > 8 && group < 18) {
-                // Это d-элементы, в короткой форме они идут в группы I-VIII (побочные)
-                group = group - 10; 
-                if (group > 8) group = 8; // VIII группа длинная
-            } else if (group === 18) {
-                group = 8; // Благородные газы в VIII группу
-            }
-
-            cell.style.gridColumn = group;
-
-            const nameRu = ruNames[el.name] || el.name;
-
-            cell.innerHTML = `
-                <div class="sym">${el.symbol}</div>
-                <div class="nam">${nameRu.toLowerCase()}</div>
-                <div class="mas">${el.atomic_mass.toFixed(2)}</div>
-            `;
-            container.appendChild(cell);
-        });
-    }
-
-    // Загрузка своего шрифта
-    document.getElementById('fontPicker').onchange = function(e) {
+    // Загрузка шрифта
+    document.getElementById('fontInput').onchange = function(e) {
+        const file = e.target.files[0];
         const reader = new FileReader();
         reader.onload = function(ev) {
-            const f = new FontFace('UserFont', ev.target.result);
-            f.load().then(font => {
-                document.fonts.add(font);
-                document.body.style.setProperty('--main-font', 'UserFont');
+            const font = new FontFace('CustomFont', ev.target.result);
+            font.load().then(f => {
+                document.fonts.add(f);
+                document.body.style.fontFamily = 'CustomFont';
             });
         };
-        reader.readAsArrayBuffer(this.files[0]);
+        reader.readAsArrayBuffer(file);
     };
 
-    function downloadTable() {
-        html2canvas(document.getElementById('table-container'), { backgroundColor: "#fff" }).then(canvas => {
+    // Сохранение в JPG
+    function saveJpg() {
+        const target = document.getElementById('table-render');
+        html2canvas(target, { scale: 2 }).then(canvas => {
             const link = document.createElement('a');
-            link.download = 'table.jpg';
-            link.href = canvas.toDataURL("image/jpeg");
+            link.download = 'mendeleev_table.jpg';
+            link.href = canvas.toDataURL("image/jpeg", 0.9);
             link.click();
         });
     }
 
-    loadElements();
+    initTable();
 </script>
 
 </body>
