--- a/index.html
+++ b/index.html
@@ -2,145 +2,144 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Короткая Таблица Менделеева</title>
+    <title>Mendeleev Short Form</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <style>
         :root {
-            --main-font: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            --size-sym: 28px;
-            --size-nam: 14px;
-            --size-mas: 12px;
+            --main-font: 'Arial', sans-serif;
+            --sz-sym: 26px;
+            --sz-nam: 13px;
+            --sz-mas: 11px;
         }
 
-        body { font-family: var(--main-font); background: #fff; padding: 20px; color: #000; }
+        body { font-family: var(--main-font); background: #fff; padding: 10px; }
 
-        /* Панель управления */
-        .panel {
-            background: #f0f2f5; padding: 20px; border-radius: 12px;
-            display: flex; flex-wrap: wrap; gap: 20px; margin-bottom: 40px;
-            border: 1px solid #ddd; align-items: center;
+        .controls {
+            position: sticky; top: 0; z-index: 100;
+            background: #fdfdfd; padding: 15px; border-bottom: 2px solid #eee;
+            display: flex; flex-wrap: wrap; gap: 15px; align-items: center;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.05);
         }
-        .ctrl { display: flex; flex-direction: column; gap: 5px; font-size: 12px; font-weight: bold; }
-        input[type="range"] { width: 120px; }
 
-        /* Сетка таблицы - 8 колонок */
-        #table-capture {
+        .ctrl-grp { display: flex; flex-direction: column; font-size: 11px; font-weight: bold; }
+
+        /* Таблица на 8 колонок + 1 колонка для номера периода */
+        #table-wrapper {
             display: grid;
-            grid-template-columns: repeat(8, 110px);
-            gap: 25px 15px;
+            grid-template-columns: 40px repeat(8, 110px);
             background: white;
-            padding: 30px;
+            padding: 20px;
             width: fit-content;
         }
 
+        .header { font-weight: bold; font-size: 20px; color: #ccc; padding: 10px; border-bottom: 1px solid #eee; }
+        .row-num { display: flex; align-items: center; justify-content: center; color: #ddd; font-weight: bold; border-right: 1px solid #f9f9f9; }
+
         .cell {
+            padding: 10px 5px;
             display: flex;
             flex-direction: column;
-            align-items: flex-start; /* Все по левому краю */
+            align-items: flex-start;
             text-align: left;
-            line-height: 1.1;
+            min-height: 80px;
         }
 
-        .s { font-size: var(--size-sym); font-weight: bold; margin-bottom: 2px; }
-        .n { font-size: var(--size-nam); }
-        .m { font-size: var(--size-mas); opacity: 0.7; }
+        .sym { font-size: var(--sz-sym); font-weight: bold; line-height: 1; margin-bottom: 4px; }
+        .nam { font-size: var(--sz-nam); line-height: 1.1; }
+        .mas { font-size: var(--sz-mas); color: #666; margin-top: 2px; }
 
-        .group-label {
-            font-size: 18px; font-weight: bold; color: #ccc;
-            margin-bottom: 10px; border-bottom: 1px solid #eee;
-        }
-
-        button.save {
-            background: #2ecc71; color: white; border: none; padding: 12px 24px;
-            border-radius: 6px; cursor: pointer; font-size: 14px; font-weight: bold;
-        }
-        button.save:hover { background: #27ae60; }
+        button { background: #000; color: #fff; border: none; padding: 10px 20px; cursor: pointer; border-radius: 4px; }
     </style>
 </head>
 <body>
 
-<div class="panel">
-    <div class="ctrl">
-        <label>1. Загрузи шрифт:</label>
-        <input type="file" id="fontFile" accept=".ttf,.otf,.woff">
-    </div>
-    <div class="ctrl">
-        Символ: <input type="range" min="10" max="80" value="28" oninput="upd('sym', this.value)">
-    </div>
-    <div class="ctrl">
-        Название: <input type="range" min="8" max="40" value="14" oninput="upd('nam', this.value)">
-    </div>
-    <div class="ctrl">
-        Масса: <input type="range" min="8" max="40" value="12" oninput="upd('mas', this.value)">
-    </div>
-    <button class="save" onclick="downloadJPG()">⬇ Скачать JPG</button>
+<div class="controls">
+    <div class="ctrl-grp">Шрифт: <input type="file" id="fontUp" accept=".ttf,.otf"></div>
+    <div class="ctrl-grp">Символ: <input type="range" min="10" max="70" value="26" oninput="change('sz-sym', this.value)"></div>
+    <div class="ctrl-grp">Имя: <input type="range" min="8" max="30" value="13" oninput="change('sz-nam', this.value)"></div>
+    <div class="ctrl-grp">Масса: <input type="range" min="8" max="30" value="11" oninput="change('sz-mas', this.value)"></div>
+    <button onclick="takeShot()">Скачать JPG</button>
 </div>
 
-<div id="table-capture">
-    <div class="group-label">I</div><div class="group-label">II</div>
-    <div class="group-label">III</div><div class="group-label">IV</div>
-    <div class="group-label">V</div><div class="group-label">VI</div>
-    <div class="group-label">VII</div><div class="group-label">VIII</div>
-</div>
+<div id="table-wrapper">
+    <div></div>
+    <div class="header">I</div><div class="header">II</div><div class="header">III</div>
+    <div class="header">IV</div><div class="header">V</div><div class="header">VI</div>
+    <div class="header">VII</div><div class="header">VIII</div>
+
+    </div>
 
 <script>
-    // Настройки размеров
-    const upd = (type, val) => document.documentElement.style.setProperty(`--size-${type}`, val + 'px');
+    const change = (id, v) => document.documentElement.style.setProperty(`--${id}`, v + 'px');
 
-    // Полная база элементов (названия на русском)
-    // Формат: [Символ, Название, Масса, Группа(1-8)]
+    // Массив: [Символ, Название, Масса, Колонка(1-8), Ряд(абсолютный)]
     const elements = [
-        ["H", "водород", "1.008", 1], ["He", "гелий", "4.002", 8],
-        ["Li", "литий", "6.94", 1], ["Be", "бериллий", "9.012", 2], ["B", "бор", "10.81", 3], ["C", "углерод", "12.01", 4], ["N", "азот", "14.00", 5], ["O", "кислород", "15.99", 6], ["F", "фтор", "18.99", 7], ["Ne", "неон", "20.18", 8],
-        ["Na", "натрий", "22.99", 1], ["Mg", "магний", "24.30", 2], ["Al", "алюминий", "26.98", 3], ["Si", "кремний", "28.08", 4], ["P", "фосфор", "30.97", 5], ["S", "сера", "32.06", 6], ["Cl", "хлор", "35.45", 7], ["Ar", "аргон", "39.94", 8],
-        ["K", "калий", "39.09", 1], ["Ca", "кальций", "40.07", 2], ["Sc", "скандий", "44.95", 3], ["Ti", "титан", "47.86", 4], ["V", "ванадий", "50.94", 5], ["Cr", "хром", "51.99", 6], ["Mn", "марганец", "54.93", 7], ["Fe", "железо", "55.84", 8], ["Co", "кобальт", "58.93", 8], ["Ni", "никель", "58.69", 8],
-        ["Cu", "медь", "63.54", 1], ["Zn", "цинк", "65.38", 2], ["Ga", "галлий", "69.72", 3], ["Ge", "германий", "72.63", 4], ["As", "мышьяк", "74.92", 5], ["Se", "селен", "78.97", 6], ["Br", "бром", "79.90", 7], ["Kr", "криптон", "83.79", 8]
-        // Список можно продолжать до 118 по тому же принципу
+        ["H", "водород", "1.008", 1, 1], ["He", "гелий", "4.002", 8, 1],
+        ["Li", "литий", "6.94", 1, 2], ["Be", "бериллий", "9.01", 2, 2], ["B", "бор", "10.81", 3, 2], ["C", "углерод", "12.01", 4, 2], ["N", "азот", "14.00", 5, 2], ["O", "кислород", "15.99", 6, 2], ["F", "фтор", "18.99", 7, 2], ["Ne", "неон", "20.18", 8, 2],
+        ["Na", "натрий", "22.99", 1, 3], ["Mg", "магний", "24.30", 2, 3], ["Al", "алюминий", "26.98", 3, 3], ["Si", "кремний", "28.08", 4, 3], ["P", "фосфор", "30.97", 5, 3], ["S", "сера", "32.06", 6, 3], ["Cl", "хлор", "35.45", 7, 3], ["Ar", "аргон", "39.94", 8, 3],
+        // Период 4 (Ряд 4 и 5)
+        ["K", "калий", "39.09", 1, 4], ["Ca", "кальций", "40.07", 2, 4], ["Sc", "скандий", "44.95", 3, 4], ["Ti", "титан", "47.86", 4, 4], ["V", "ванадий", "50.94", 5, 4], ["Cr", "хром", "51.99", 6, 4], ["Mn", "марганец", "54.93", 7, 4], ["Fe", "железо", "55.84", 8, 4], ["Co", "кобальт", "58.93", 8, 4], ["Ni", "никель", "58.69", 8, 4],
+        ["Cu", "медь", "63.54", 1, 5], ["Zn", "цинк", "65.38", 2, 5], ["Ga", "галлий", "69.72", 3, 5], ["Ge", "германий", "72.63", 4, 5], ["As", "мышьяк", "74.92", 5, 5], ["Se", "селен", "78.97", 6, 5], ["Br", "бром", "79.90", 7, 5], ["Kr", "криптон", "83.79", 8, 5],
+        // Период 5 (Ряд 6 и 7)
+        ["Rb", "рубидий", "85.46", 1, 6], ["Sr", "стронций", "87.62", 2, 6], ["Y", "иттрий", "88.90", 3, 6], ["Zr", "цирконий", "91.22", 4, 6], ["Nb", "ниобий", "92.90", 5, 6], ["Mo", "молибден", "95.95", 6, 6], ["Tc", "технеций", "98", 7, 6], ["Ru", "рутений", "101.07", 8, 6], ["Rh", "родий", "102.90", 8, 6], ["Pd", "палладий", "106.42", 8, 6],
+        ["Ag", "серебро", "107.86", 1, 7], ["Cd", "кадмий", "112.41", 2, 7], ["In", "индий", "114.81", 3, 7], ["Sn", "олово", "118.71", 4, 7], ["Sb", "сурьма", "121.76", 5, 7], ["Te", "теллур", "127.60", 6, 7], ["I", "йод", "126.90", 7, 7], ["Xe", "ксенон", "131.29", 8, 7],
+        // Период 6 (Ряд 8 и 9)
+        ["Cs", "цезий", "132.90", 1, 8], ["Ba", "барий", "137.32", 2, 8], ["La*", "лантан", "138.90", 3, 8], ["Hf", "гафний", "178.49", 4, 8], ["Ta", "тантал", "180.94", 5, 8], ["W", "вольфрам", "183.84", 6, 8], ["Re", "рений", "186.20", 7, 8], ["Os", "осмий", "190.23", 8, 8], ["Ir", "иридий", "192.21", 8, 8], ["Pt", "платина", "195.08", 8, 8],
+        ["Au", "золото", "196.96", 1, 9], ["Hg", "ртуть", "200.59", 2, 9], ["Tl", "таллий", "204.38", 3, 9], ["Pb", "свинец", "207.2", 4, 9], ["Bi", "висмут", "208.98", 5, 9], ["Po", "полоний", "209", 6, 9], ["At", "астат", "210", 7, 9], ["Rn", "радон", "222", 8, 9]
     ];
 
-    const container = document.getElementById('table-capture');
+    const wrapper = document.getElementById('table-wrapper');
 
-    // Рендерим таблицу
-    elements.forEach(el => {
-        const div = document.createElement('div');
-        div.className = 'cell';
-        div.style.gridColumn = el[3]; // Устанавливаем в нужную колонку группы
+    // Отрисовка
+    function render() {
+        // Создаем пустые ячейки для рядов (номера периодов)
+        for(let r=1; r<=9; r++) {
+            const num = document.createElement('div');
+            num.className = 'row-num';
+            num.innerText = r;
+            num.style.gridRow = r + 1;
+            num.style.gridColumn = 1;
+            wrapper.appendChild(num);
+        }
 
-        div.innerHTML = `
-            <div class="s">${el[0]}</div>
-            <div class="n">${el[1]}</div>
-            <div class="m">${el[2]}</div>
-        `;
-        container.appendChild(div);
-    });
+        elements.forEach(el => {
+            const div = document.createElement('div');
+            div.className = 'cell';
+            div.style.gridColumn = el[3] + 1;
+            div.style.gridRow = el[4] + 1;
 
-    // Работа со шрифтом
-    document.getElementById('fontFile').onchange = function(e) {
-        const file = e.target.files[0];
-        const reader = new FileReader();
-        reader.onload = function(ev) {
-            const font = new FontFace('CustomFont', ev.target.result);
-            font.load().then(f => {
-                document.fonts.add(f);
-                document.body.style.fontFamily = 'CustomFont';
-            });
-        };
-        reader.readAsArrayBuffer(file);
-    };
-
-    // Скачивание JPG
-    function downloadJPG() {
-        const area = document.getElementById('table-capture');
-        html2canvas(area, { 
-            scale: 2,
-            backgroundColor: "#ffffff"
-        }).then(canvas => {
-            const link = document.createElement('a');
-            link.download = 'mendeleev-custom.jpg';
-            link.href = canvas.toDataURL("image/jpeg", 0.9);
-            link.click();
+            div.innerHTML = `
+                <div class="sym">${el[0]}</div>
+                <div class="nam">${el[1].toLowerCase()}</div>
+                <div class="mas">${el[2]}</div>
+            `;
+            wrapper.appendChild(div);
         });
     }
+
+    // Шрифт
+    document.getElementById('fontUp').onchange = function(e) {
+        const reader = new FileReader();
+        reader.onload = function(ev) {
+            const f = new FontFace('Custom', ev.target.result);
+            f.load().then(font => {
+                document.fonts.add(font);
+                document.body.style.fontFamily = 'Custom';
+            });
+        };
+        reader.readAsArrayBuffer(this.files[0]);
+    };
+
+    function takeShot() {
+        html2canvas(document.getElementById('table-wrapper'), { scale: 2 }).then(canvas => {
+            const a = document.createElement('a');
+            a.download = 'table.jpg';
+            a.href = canvas.toDataURL("image/jpeg", 0.9);
+            a.click();
+        });
+    }
+
+    render();
 </script>
 
 </body>
