--- a/index.html
+++ b/index.html
@@ -2,152 +2,183 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Полная Короткая Таблица</title>
+    <title>Mendeleev Table Custom Layout</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <style>
         :root {
-            --main-font: 'Arial', sans-serif;
-            --sz-s: 24px; --sz-n: 13px; --sz-m: 11px;
+            --font-main: 'Arial', sans-serif;
+            --sz-symbol: 26px;
+            --sz-name: 13px;
+            --sz-mass: 11px;
         }
-        body { font-family: var(--main-font); background: #fff; padding: 20px; }
-        
-        .panel {
-            position: sticky; top: 0; z-index: 99; background: #f8f9fa;
-            padding: 15px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.05);
-            display: flex; gap: 20px; flex-wrap: wrap; margin-bottom: 20px; align-items: flex-end;
-        }
-        .c-grp { display: flex; flex-direction: column; font-size: 12px; font-weight: bold; }
-        input[type=range] { width: 100px; }
-        button { background: #333; color: white; border: none; padding: 8px 15px; border-radius: 4px; cursor: pointer; height: 30px; }
 
-        #grid-box {
+        body { font-family: var(--font-main); background: #fff; padding: 20px; }
+
+        /* Панель управления */
+        .controls {
+            background: #f4f7f6; padding: 20px; border-radius: 10px;
+            display: flex; flex-wrap: wrap; gap: 20px; margin-bottom: 30px;
+            border: 1px solid #ddd; align-items: center;
+        }
+        .ctrl-item { display: flex; flex-direction: column; gap: 5px; font-size: 12px; font-weight: bold; }
+        input[type="range"] { width: 120px; }
+
+        /* Сетка: 1 колонка для номера ряда + 8 для групп */
+        #table-container {
             display: grid;
-            grid-template-columns: 30px repeat(8, 105px); /* Номер ряда + 8 групп */
-            gap: 10px;
-            padding: 20px; background: white;
+            grid-template-columns: 40px repeat(8, 120px);
+            /* Задаем 15 строк (1 заголовок + 15 рядов) */
+            grid-template-rows: 40px repeat(15, auto);
+            gap: 15px;
+            background: white;
+            padding: 20px;
             width: fit-content;
         }
 
-        .h-col { font-weight: bold; text-align: center; color: #999; padding-bottom: 5px; border-bottom: 2px solid #eee; }
-        .h-row { font-weight: bold; text-align: center; color: #999; padding-right: 5px; border-right: 2px solid #eee; display: flex; align-items: center; justify-content: center;}
+        .header { font-weight: bold; font-size: 20px; color: #bbb; border-bottom: 1px solid #eee; padding-bottom: 5px; }
+        .row-label { display: flex; align-items: center; justify-content: center; color: #ddd; font-weight: bold; border-right: 1px solid #eee; }
 
-        /* Обычная ячейка */
-        .el {
-            display: flex; flex-direction: column; align-items: flex-start;
-            padding: 5px; min-height: 70px;
-        }
-        /* Ячейка для триад (VIII группа) */
-        .triad-container {
-            display: flex; flex-direction: column; gap: 15px; padding: 5px;
+        /* Ячейка элемента */
+        .cell {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            text-align: left;
+            padding: 5px;
         }
 
-        .s { font-size: var(--sz-s); font-weight: 900; line-height: 1; }
-        .n { font-size: var(--sz-n); line-height: 1.1; margin-top: 2px; }
-        .m { font-size: var(--sz-m); opacity: 0.6; margin-top: 2px; }
+        /* Контейнер для нескольких элементов в одной группе (например, VIII группа) */
+        .stack { display: flex; flex-direction: column; gap: 20px; }
+
+        .s { font-size: var(--sz-symbol); font-weight: bold; line-height: 1; margin-bottom: 4px; }
+        .n { font-size: var(--sz-name); line-height: 1.1; }
+        .m { font-size: var(--sz-mass); color: #777; margin-top: 2px; }
+
+        button { background: #000; color: #fff; border: none; padding: 10px 20px; cursor: pointer; border-radius: 5px; font-weight: bold; }
+        button:hover { background: #333; }
     </style>
 </head>
 <body>
 
-<div class="panel">
-    <div class="c-grp">Шрифт: <input type="file" id="fUp" accept=".ttf,.otf"></div>
-    <div class="c-grp">Симв: <input type="range" min="14" max="50" value="24" oninput="set('s',this.value)"></div>
-    <div class="c-grp">Имя: <input type="range" min="8" max="24" value="13" oninput="set('n',this.value)"></div>
-    <div class="c-grp">Масса: <input type="range" min="8" max="24" value="11" oninput="set('m',this.value)"></div>
-    <button onclick="saveJPG()">Скачать JPG</button>
+<div class="controls">
+    <div class="ctrl-item">
+        Шрифт: <input type="file" id="fontLoader" accept=".ttf,.otf,.woff">
+    </div>
+    <div class="ctrl-item">
+        Символ: <input type="range" min="10" max="60" value="26" oninput="upd('symbol', this.value)">
+    </div>
+    <div class="ctrl-item">
+        Название: <input type="range" min="8" max="30" value="13" oninput="upd('name', this.value)">
+    </div>
+    <div class="ctrl-item">
+        Масса: <input type="range" min="8" max="30" value="11" oninput="upd('mass', this.value)">
+    </div>
+    <button onclick="download()">Скачать JPG</button>
 </div>
 
-<div id="grid-box">
-    <div></div><div class="h-col">I</div><div class="h-col">II</div><div class="h-col">III</div>
-    <div class="h-col">IV</div><div class="h-col">V</div><div class="h-col">VI</div>
-    <div class="h-col">VII</div><div class="h-col">VIII</div>
-    </div>
+<div id="table-container">
+    <div></div>
+    <div class="header">I</div><div class="header">II</div><div class="header">III</div>
+    <div class="header">IV</div><div class="header">V</div><div class="header">VI</div>
+    <div class="header">VII</div><div class="header">VIII</div>
+</div>
 
 <script>
-    const set = (t,v) => document.documentElement.style.setProperty(`--sz-${t}`, v+'px');
-    const box = document.getElementById('grid-box');
+    const upd = (t, v) => document.documentElement.style.setProperty(`--sz-${t}`, v + 'px');
 
-    // Данные: [Символ, Название, Масса, Колонка, Ряд, ЭтоТриада?]
-    // Полный список 118 элементов для короткой формы
-    const fullData = [
-        ["H","водород","1.008",1,1],["He","гелий","4.002",8,1],
-        ["Li","литий","6.94",1,2],["Be","бериллий","9.01",2,2],["B","бор","10.81",3,2],["C","углерод","12.01",4,2],["N","азот","14.01",5,2],["O","кислород","16.00",6,2],["F","фтор","19.00",7,2],["Ne","неон","20.18",8,2],
-        ["Na","натрий","22.99",1,3],["Mg","магний","24.30",2,3],["Al","алюминий","26.98",3,3],["Si","кремний","28.09",4,3],["P","фосфор","30.97",5,3],["S","сера","32.06",6,3],["Cl","хлор","35.45",7,3],["Ar","аргон","39.95",8,3],
+    // База элементов (Символ, Имя, Масса, Группа(1-8), Ряд(1-15))
+    const elements = [
+        ["H", "водород", "1.008", 1, 1], ["He", "гелий", "4.002", 8, 1],
+        ["Li", "литий", "6.94", 1, 2], ["Be", "бериллий", "9.01", 2, 2], ["B", "бор", "10.81", 3, 2], ["C", "углерод", "12.01", 4, 2], ["N", "азот", "14.00", 5, 2], ["O", "кислород", "15.99", 6, 2], ["F", "фтор", "18.99", 7, 2], ["Ne", "неон", "20.18", 8, 2],
+        ["Na", "натрий", "22.99", 1, 3], ["Mg", "магний", "24.30", 2, 3], ["Al", "алюминий", "26.98", 3, 3], ["Si", "кремний", "28.08", 4, 3], ["P", "фосфор", "30.97", 5, 3], ["S", "сера", "32.06", 6, 3], ["Cl", "хлор", "35.45", 7, 3], ["Ar", "аргон", "39.94", 8, 3],
         
-        // Период 4 (Ряды 4 и 5)
-        ["K","калий","39.10",1,4],["Ca","кальций","40.08",2,4],["Sc","скандий","44.96",3,4],["Ti","титан","47.87",4,4],["V","ванадий","50.94",5,4],["Cr","хром","52.00",6,4],["Mn","марганец","54.94",7,4],
-        ["Fe","железо","55.85",8,4,true],["Co","кобальт","58.93",8,4,true],["Ni","никель","58.69",8,4,true], // Триада
-        ["Cu","медь","63.55",1,5],["Zn","цинк","65.38",2,5],["Ga","галлий","69.72",3,5],["Ge","германий","72.63",4,5],["As","мышьяк","74.92",5,5],["Se","селен","78.97",6,5],["Br","бром","79.90",7,5],["Kr","криптон","83.80",8,5],
+        // Ряд 4 (K - Mn) + Триада (Fe, Co, Ni)
+        ["K", "калий", "39.09", 1, 4], ["Ca", "кальций", "40.07", 2, 4], ["Sc", "скандий", "44.95", 3, 4], ["Ti", "титан", "47.86", 4, 4], ["V", "ванадий", "50.94", 5, 4], ["Cr", "хром", "51.99", 6, 4], ["Mn", "марганец", "54.93", 7, 4],
+        ["Fe, Co, Ni", "", "", 8, 4, true], // Специальная метка для триады
 
-        // Период 5 (Ряды 6 и 7)
-        ["Rb","рубидий","85.47",1,6],["Sr","стронций","87.62",2,6],["Y","иттрий","88.91",3,6],["Zr","цирконий","91.22",4,6],["Nb","ниобий","92.91",5,6],["Mo","молибден","95.95",6,6],["Tc","технеций","98",7,6],
-        ["Ru","рутений","101.1",8,6,true],["Rh","родий","102.9",8,6,true],["Pd","палладий","106.4",8,6,true], // Триада
-        ["Ag","серебро","107.9",1,7],["Cd","кадмий","112.4",2,7],["In","индий","114.8",3,7],["Sn","олово","118.7",4,7],["Sb","сурьма","121.8",5,7],["Te","теллур","127.6",6,7],["I","йод","126.9",7,7],["Xe","ксенон","131.3",8,7],
+        // Ряд 5 (Cu - Kr)
+        ["Cu", "медь", "63.54", 1, 5], ["Zn", "цинк", "65.38", 2, 5], ["Ga", "галлий", "69.72", 3, 5], ["Ge", "германий", "72.63", 4, 5], ["As", "мышьяк", "74.92", 5, 5], ["Se", "селен", "78.97", 6, 5], ["Br", "бром", "79.90", 7, 5], ["Kr", "криптон", "83.79", 8, 5],
 
-        // Период 6 (Ряды 8 и 9)
-        ["Cs","цезий","132.9",1,8],["Ba","барий","137.3",2,8],["La*","лантан","138.9",3,8],["Hf","гафний","178.5",4,8],["Ta","тантал","180.9",5,8],["W","вольфрам","183.8",6,8],["Re","рений","186.2",7,8],
-        ["Os","осмий","190.2",8,8,true],["Ir","иридий","192.2",8,8,true],["Pt","платина","195.1",8,8,true], // Триада
-        ["Au","золото","197.0",1,9],["Hg","ртуть","200.6",2,9],["Tl","таллий","204.4",3,9],["Pb","свинец","207.2",4,9],["Bi","висмут","209.0",5,9],["Po","полоний","209",6,9],["At","астат","210",7,9],["Rn","радон","222",8,9],
+        // Ряд 6 (Rb - Tc) + Триада (Ru, Rh, Pd)
+        ["Rb", "рубидий", "85.46", 1, 6], ["Sr", "стронций", "87.62", 2, 6], ["Y", "иттрий", "88.90", 3, 6], ["Zr", "цирконий", "91.22", 4, 6], ["Nb", "ниобий", "92.90", 5, 6], ["Mo", "молибден", "95.95", 6, 6], ["Tc", "технеций", "98", 7, 6],
+        ["Ru, Rh, Pd", "", "", 8, 6, true],
 
-        // Период 7 (Ряды 10 и 11) - ВОТ ОНИ, ПРОПАВШИЕ РЯДЫ
-        ["Fr","франций","223",1,10],["Ra","радий","226",2,10],["Ac**","актиний","227",3,10],["Rf","резерфордий","267",4,10],["Db","дубний","268",5,10],["Sg","сиборгий","269",6,10],["Bh","борий","270",7,10],
-        ["Hs","хассий","277",8,10,true],["Mt","мейтнерий","278",8,10,true],["Ds","дармштадтий","281",8,10,true], // Триада
-        ["Rg","рентгений","282",1,11],["Cn","коперниций","285",2,11],["Nh","нихоний","286",3,11],["Fl","флеровий","289",4,11],["Mc","московий","290",5,11],["Lv","ливерморий","293",6,11],["Ts","теннессин","294",7,11],["Og","оганесон","294",8,11]
+        // Ряд 7 (Ag - Xe)
+        ["Ag", "серебро", "107.8", 1, 7], ["Cd", "кадмий", "112.4", 2, 7], ["In", "индий", "114.8", 3, 7], ["Sn", "олово", "118.7", 4, 7], ["Sb", "сурьма", "121.7", 5, 7], ["Te", "теллур", "127.6", 6, 7], ["I", "йод", "126.9", 7, 7], ["Xe", "ксенон", "131.2", 8, 7],
+
+        // Ряд 8 (Cs - Re) + Триада (Os, Ir, Pt)
+        ["Cs", "цезий", "132.9", 1, 8], ["Ba", "барий", "137.3", 2, 8], ["La*", "лантан", "138.9", 3, 8], ["Hf", "гафний", "178.4", 4, 8], ["Ta", "тантал", "180.9", 5, 8], ["W", "вольфрам", "183.8", 6, 8], ["Re", "рений", "186.2", 7, 8],
+        ["Os, Ir, Pt", "", "", 8, 8, true],
+
+        // Ряд 9 (Au - Rn)
+        ["Au", "золото", "196.9", 1, 9], ["Hg", "ртуть", "200.5", 2, 9], ["Tl", "таллий", "204.3", 3, 9], ["Pb", "свинец", "207.2", 4, 9], ["Bi", "висмут", "208.9", 5, 9], ["Po", "полоний", "209", 6, 9], ["At", "астат", "210", 7, 9], ["Rn", "радон", "222", 8, 9],
+
+        // Ряд 10 (Fr, Ra, Ac)
+        ["Fr", "франций", "223", 1, 10], ["Ra", "радий", "226", 2, 10], ["Ac**", "актиний", "227", 3, 10]
     ];
 
+    const triads = {
+        "Fe, Co, Ni": [["Fe", "железо", "55.8"], ["Co", "кобальт", "58.9"], ["Ni", "никель", "58.6"]],
+        "Ru, Rh, Pd": [["Ru", "рутений", "101.0"], ["Rh", "родий", "102.9"], ["Pd", "палладий", "106.4"]],
+        "Os, Ir, Pt": [["Os", "осмий", "190.2"], ["Ir", "иридий", "192.2"], ["Pt", "платина", "195.0"]]
+    };
+
+    const container = document.getElementById('table-container');
+
     function render() {
-        // Создаем номера рядов (1-11)
-        for(let i=1; i<=11; i++){
-            let rowNum = document.createElement('div');
-            rowNum.className = 'h-row'; rowNum.innerText = i;
-            rowNum.style.gridColumn = 1; rowNum.style.gridRow = i+1;
-            box.appendChild(rowNum);
+        // Создаем номера рядов 1-15
+        for (let i = 1; i <= 15; i++) {
+            const lbl = document.createElement('div');
+            lbl.className = 'row-label';
+            lbl.innerText = i;
+            lbl.style.gridColumn = 1;
+            lbl.style.gridRow = i + 1;
+            container.appendChild(lbl);
         }
 
-        // Рендерим элементы
-        fullData.forEach(data => {
-            let cell;
-            // Проверка на триаду: если это триада, ищем, есть ли уже контейнер в этой ячейке
-            if(data[5]) { 
-                let selector = `.triad-container[style*="grid-column: ${data[3]+1}"][style*="grid-row: ${data[4]+1}"]`;
-                cell = box.querySelector(selector);
-                if(!cell) {
-                    cell = document.createElement('div');
-                    cell.className = 'triad-container';
-                    cell.style.gridColumn = data[3] + 1;
-                    cell.style.gridRow = data[4] + 1;
-                    box.appendChild(cell);
-                }
-            } else {
-                cell = document.createElement('div');
-                cell.className = 'el';
-                cell.style.gridColumn = data[3] + 1;
-                cell.style.gridRow = data[4] + 1;
-                box.appendChild(cell);
-            }
+        // Рисуем элементы
+        elements.forEach(item => {
+            const cell = document.createElement('div');
+            cell.className = 'cell';
+            cell.style.gridColumn = item[3] + 1;
+            cell.style.gridRow = item[4] + 1;
 
-            const elBlock = document.createElement('div');
-            elBlock.className = 'el';
-            if(data[5]) elBlock.style.padding = '0'; // Убираем отступы внутри триады
-            elBlock.innerHTML = `<div class="s">${data[0]}</div><div class="n">${data[1]}</div><div class="m">${data[2]}</div>`;
-            cell.appendChild(elBlock);
+            if (item[5]) { // Если это триада
+                const stack = document.createElement('div');
+                stack.className = 'stack';
+                triads[item[0]].forEach(t => {
+                    const el = document.createElement('div');
+                    el.innerHTML = `<div class="s">${t[0]}</div><div class="n">${t[1].toLowerCase()}</div><div class="m">${t[2]}</div>`;
+                    stack.appendChild(el);
+                });
+                cell.appendChild(stack);
+            } else {
+                cell.innerHTML = `<div class="s">${item[0]}</div><div class="n">${item[1].toLowerCase()}</div><div class="m">${item[2]}</div>`;
+            }
+            container.appendChild(cell);
         });
     }
 
-    // Загрузка шрифта
-    document.getElementById('fUp').onchange = e => {
-        const fr = new FileReader();
-        fr.onload = ev => {
-            new FontFace('CuFont', ev.target.result).load().then(f => {
-                document.fonts.add(f); document.body.style.fontFamily = 'CuFont';
+    // Загрузка своего шрифта
+    document.getElementById('fontLoader').onchange = function(e) {
+        const file = e.target.files[0];
+        const reader = new FileReader();
+        reader.onload = function(ev) {
+            const f = new FontFace('CustomFont', ev.target.result);
+            f.load().then(font => {
+                document.fonts.add(font);
+                document.body.style.fontFamily = 'CustomFont';
             });
         };
-        fr.readAsArrayBuffer(e.target.files[0]);
-    }
+        reader.readAsArrayBuffer(file);
+    };
 
-    function saveJPG() {
-        html2canvas(box, {scale:2, backgroundColor: '#fff'}).then(c => {
-            let a = document.createElement('a'); a.download='mendeleev_full.jpg';
-            a.href=c.toDataURL('image/jpeg', 0.9); a.click();
+    function download() {
+        html2canvas(container, { scale: 2, backgroundColor: "#fff" }).then(canvas => {
+            const link = document.createElement('a');
+            link.download = 'table.jpg';
+            link.href = canvas.toDataURL("image/jpeg", 0.9);
+            link.click();
         });
     }
 
